--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,7 +1,10 @@
 .contact {
+  display: flex;
+  flex-flow: column;
   margin: 1rem;
   &__form {
     display: flex;
+    flex: 1;
     flex-flow: column nowrap;
     justify-content: space-evenly;
     align-items: center;
@@ -39,7 +42,7 @@
   &__form-divider textarea {
     width: 95%;
     margin-top: 2rem;
-
+    flex: 1;
     height: 120px;
     border: 1px solid $secondary-color;
     padding: 1rem;
