--- a/src/components/SlideMenu/SlideMenu.scss
+++ b/src/components/SlideMenu/SlideMenu.scss
@@ -1,21 +1,20 @@
 .slide-menu {
   visibility: hidden;
-  display: none;
-  opacity: 0;
+  display: block;
+
   height: 100vh;
-  z-index: 10;
+  z-index: 1000;
   width: 100vw;
   background: rgba(0, 0, 0, 0.9);
   position: fixed;
   top: 0;
   left: 0;
+  transform: translateX(-1000px);
   transition: all 0.5s ease-in-out;
-  transform: translateX(0px);
   &.active {
-    opacity: 100%;
     visibility: visible;
     display: block;
-    transform: translateX(0px);
+    transform: translateX(-0px);
   }
 
   &__list {
